--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/8b1ea9cb76.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -44,40 +45,183 @@
     <section class="offers">
         <div class="container offers-container">
             <div class="offers-women">
-                <h2 class="offers-text">30% OFF <br>
-                    <span class="offers-pink">FOR WOMEN</span>
-                </h2>
+                <a class="offers-link--women" href="#">
+                    <h2 class="offers-text">30% OFF <br>
+                        <span class="offers-pink">FOR WOMEN</span>
+                    </h2>
+                </a>
             </div>
             <div class="offers-men">
-                <h2 class="offers-text">HOT DEAL <br>
-                    <span class="offers-pink">FOR MEN</span>
-                </h2>
+                <a class="offers-link--men" href="#">
+                    <h2 class="offers-text">HOT DEAL <br>
+                        <span class="offers-pink">FOR MEN</span>
+                    </h2>
+                </a>
             </div>
             <div class="offers-kids">
-                <h2 class="offers-text">NEW ARRIVALS <br>
-                    <span class="offers-pink">FOR KIDS</span>
-                </h2>
+                <a class="offers-link--kids" href="#">
+                    <h2 class="offers-text">NEW ARRIVALS <br>
+                        <span class="offers-pink">FOR KIDS</span>
+                    </h2>
+                </a>
             </div>
             <div class="offers-acces">
-                <h2 class="offers-text">LUXIROUS & TRENDY <br>
-                    <span class="offers-pink">ACCESORIES</span>
-                </h2>
+                <a class="offers-link--acces" href="#">
+                    <h2 class="offers-text">LUXIROUS & TRENDY <br>
+                        <span class="offers-pink">ACCESORIES</span>
+                    </h2>
+                </a>
+            </div>
+        </div>
+    </section>
+    <section class="products">
+        <div class="container products-container">
+            <h3 class="products-title">Fetured Items</h3>
+            <p class="products-desc">Shop for items based on what we featured in this week</p>
+
+            <div class="products-item">
+                <div class="item item1">
+                    <a class="item-link" href="#">
+                        <img src="img/1.png" alt="img">
+                        <div class="item-text">
+                            <h4 class="item-text--title">ELLERY X M'O CAPSULE</h4>
+                            <p class="item-text--description">Known for her sculptural takes on traditional tailoring,
+                                Australian arbiter of cool Kym
+                                Ellery teams up with Moda Operandi.</p>
+                            <p class="item-text--price">$52.00</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="item item2">
+                    <a class="item-link" href="#">
+                        <img src="img/2.png" alt="img">
+                        <div class="item-text">
+                            <h4 class="item-text--title">ELLERY X M'O CAPSULE</h4>
+                            <p class="item-text--description">Known for her sculptural takes on traditional tailoring,
+                                Australian arbiter of cool Kym
+                                Ellery teams up with Moda Operandi.</p>
+                            <p class="item-text--price">$52.00</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="item item3">
+                    <a class="item-link" href="#">
+                        <img src="img/3.png" alt="img">
+                        <div class="item-text">
+                            <h4 class="item-text--title">ELLERY X M'O CAPSULE</h4>
+                            <p class="item-text--description">Known for her sculptural takes on traditional tailoring,
+                                Australian arbiter of cool Kym
+                                Ellery teams up with Moda Operandi.</p>
+                            <p class="item-text--price">$52.00</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="item item4">
+                    <a class="item-link" href="#">
+                        <img src="img/4.png" alt="img">
+                        <div class="item-text">
+                            <h4 class="item-text--title">ELLERY X M'O CAPSULE</h4>
+                            <p class="item-text--description">Known for her sculptural takes on traditional tailoring,
+                                Australian arbiter of cool Kym
+                                Ellery teams up with Moda Operandi.</p>
+                            <p class="item-text--price">$52.00</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="item item5">
+                    <a class="item-link" href="#">
+                        <img src="img/5.png" alt="img">
+                        <div class="item-text">
+                            <h4 class="item-text--title">ELLERY X M'O CAPSULE</h4>
+                            <p class="item-text--description">Known for her sculptural takes on traditional tailoring,
+                                Australian arbiter of cool Kym
+                                Ellery teams up with Moda Operandi.</p>
+                            <p class="item-text--price">$52.00</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="item item6">
+                    <a class="item-link" href="#">
+                        <img src="img/6.png" alt="img">
+                        <div class="item-text">
+                            <h4 class="item-text--title">ELLERY X M'O CAPSULE</h4>
+                            <p class="item-text--description">Known for her sculptural takes on traditional tailoring,
+                                Australian arbiter of cool Kym
+                                Ellery teams up with Moda Operandi.</p>
+                            <p class="item-text--price">$52.00</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <button class="offers-button">
+                <a class="all-product" href="#">
+                    <p class="button-text">Browse All Product</p>
+                </a>
+            </button>
+        </div>
+
+    </section>
+    <section class="benefits">
+        <div class="container benefits-container">
+            <div class="delivery">
+                <p><img src="img/delivery.svg" alt="logo"></p>
+                <h4 class="benefits-title">Free Delivery</h4>
+                <p class="benefits-desc">Worldwide delivery on all. Authorit tively morph next-generation innov tion
+                    with extensive models.
+                </p>
+            </div>
+            <div class="sales">
+                <img src="img/discountimg.svg" alt="img">
+                <h4 class="benefits-title">Sales & discounts</h4>
+                <p class="benefits-desc">Worldwide delivery on all. Authorit tively morph next-generation innov tion
+                    with extensive models.
+                </p>
+            </div>
+            <div class="quality">
+                <img src="img/quality.svg" alt="img">
+                <h4 class="benefits-title">Quality assurance</h4>
+                <p class="benefits-desc">Worldwide delivery on all. Authorit tively morph next-generation innov tion
+                    with extensive models.
+                </p>
             </div>
 
 
         </div>
     </section>
-    <section class="futured">
-        Futured
-    </section>
-    <section class="benefits">
-        Benefits
-    </section>
     <section class="reviews">
-        Reviews
+        <div class="container reviews-container">
+            <div class="review-left">
+                <img src="img/bgcreview.png" alt="img">
+                <p class="review-text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus
+                    condimentum“</p>
+            </div>
+            <div class="review-right">
+                <p class="sub-text">SUBSCRIBE <br>
+                    <span class="sub-text--small">FOR OUR NEWLETTER AND PROMOTION</span>
+                </p>
+                <div class="review-sub">
+                    <input class="review-email" type="text" value="Enter Your Email">
+                    <input class="review-button" type="button" value="Subscribe">
+                </div>
+
+            </div>
+        </div>
     </section>
     <footer class="footer">
-        Footer
+        <div class="container footer-container">
+            <div class="footer-text">
+                <p>© 2021 Brand All Rights Reserved.</p>
+            </div>
+            <div class="footer-icons">
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-pinterest-p"></i>
+                <i class="fa-brands fa-twitter"></i>
+            </div>
+
+        </div>
+
     </footer>
 
 
