--- a/index.html
+++ b/index.html
@@ -23,7 +23,67 @@
                     <button class="search-button"><img src="img/search.svg" alt="logo">
                 </div>
                 <div class="header-right">
-                    <button class="menu-button"><img src="img/menu.svg" alt="logo"></button>
+                    <div class="nav-menu">
+                        <button class="menu-button">
+                            <img src="img/menu.svg" alt="logo">
+                        </button>
+                        <nav class="navigation">
+                            <div class="menu-box">
+                                <button class="close"></button>
+                                <p class="nav-title">MENU</p>
+                                <ul class="menu">
+                                    <li class="menu-title">MAN</li>
+                                    <a class="menu-link--dec" href="#">
+                                        <li class="menu-link">Accessories</li>
+                                    </a>
+                                    <a class="menu-link--dec" href="#">
+                                        <li class="menu-link">Bags</li>
+                                    </a>
+                                    <a class="menu-link--dec" href="#">
+                                        <li class="menu-link">Denim</li>
+                                    </a>
+                                    <a class="menu-link--dec" href="#">
+                                        <li class="menu-link">T-Shirts</li>
+                                    </a>
+                                    <li class="menu-title">WOMAN</li>
+                                    <a class="menu-link--dec" href="#">
+                                        <li class="menu-link">Accessories</li>
+                                    </a>
+                                    <a class="menu-link--dec" href="#">
+                                        <li class="menu-link">Jackets & Coats</li>
+                                    </a>
+                                    <a class="menu-link--dec" href="#">
+                                        <li class="menu-link">Polos</li>
+                                    </a>
+                                    <a class="menu-link--dec" href="#">
+                                        <li class="menu-link">T-Shirts</li>
+                                    </a>
+                                    <a class="menu-link--dec" href="#">
+                                        <li class="menu-link">Shirts</li>
+                                    </a>
+                                    <li class="menu-title">KIDS</li>
+                                    <a class="menu-link--dec" href="#">
+                                        <li class="menu-link">Accessories</li>
+                                    </a>
+                                    <a class="menu-link--dec" href="#">
+                                        <li class="menu-link">Jackets & Coats</li>
+                                    </a>
+                                    <a class="menu-link--dec" href="#">
+                                        <li class="menu-link">Polos</li>
+                                    </a>
+                                    <a class="menu-link--dec" href="#">
+                                        <li class="menu-link">T-Shirts</li>
+                                    </a>
+                                    <a class="menu-link--dec" href="#">
+                                        <li class="menu-link">Shirts</li>
+                                    </a>
+                                    <a class="menu-link--dec" href="#">
+                                        <li class="menu-link">Bags</li>
+                                    </a>
+                            </div>
+                            </ul>
+                        </nav>
+                    </div>
                     <a class="user-logo" href="#"><img src="img/user.svg" alt="logo"></a>
                     <a class="cart-logo" href="#">
                         <p class="cart-text">5</p><img src="img/buy.svg" alt="logo">
@@ -31,7 +91,10 @@
                 </div>
             </div>
         </div>
+
+
     </header>
+
     <section class="brand">
         <div class="container brand-container">
             <h1 class="brand-title">
