--- a/product.html
+++ b/product.html
@@ -101,38 +101,69 @@
         </div>
     </section>
     <section class="carousel">
-        <ul class="carousel-viewport">
-            <li class="carousel-slide1">
-                <img src="img/carusel1.png" alt="foto">
-
-            </li>
-            <li class="carousel-slide2">
-
-            </li>
-
-        </ul>
-
-
-    </section>
-    <section class="products1">
-        <div class="container products-desc">
-            <p class="desc-title">WOMEN COLLECTION</p>
-            <hr class="desc-line--up">
-            <p class="desc-brand">MOSCHINO CHEAP AND CHIC</p>
-            <p class="desc-item">Compellingly actualize fully researched processes before proactive outsourcing.
-                Progressively syndicate
-                collaborative architectures before cutting-edge services. Completely visualize parallel core
-                competencies rather than exceptional portals. </p>
-            <p class="desc-price">$561</p>
-            <hr class="desc-line--down">
-            <div class="desc-filter">
-                <p class="filter-title">CHOOSE COLOR </p>
-                <p class="filter-title">CHOOSE SIZE </p>
-                <p class="filter-title">QUANTITY</p>
+        <div class="arrows">
+            <div class="arrows-left">
+                <div class="prew"></div>
+            </div>
+            <div class="arrows-right">
+                <div class="next"></div>
             </div>
 
         </div>
-        <div class="container produscts-box">
+        <div class="container">
+            <div class="carousel-box">
+                <ul class="carousel-viewport">
+                    <li class="carousel-slide1">
+                        <img src="img/carusel1.png" alt="foto">
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section class="card-desc--wrapper">
+        <div class="container">
+            <div class="card-desc">
+                <p class="desc-title">WOMEN COLLECTION</p>
+                <hr class="desc-line--up">
+                <p class="desc-brand">MOSCHINO CHEAP AND CHIC</p>
+                <p class="desc-item">Compellingly actualize fully researched processes before proactive outsourcing.
+                    Progressively syndicate
+                    collaborative architectures before cutting-edge services. Completely visualize parallel core
+                    competencies rather than exceptional portals. </p>
+                <p class="desc-price">$561</p>
+                <hr class="desc-line--down">
+                <div class="desc-filter">
+                    <details class="filter-title">
+                        <summary>CHOOSE COLOR</summary>
+                        <p>Black</p>
+                        <p>White</p>
+                        <p>Red</p>
+                    </details>
+                    <details class="filter-title">
+                        <summary class="filter-center">CHOOSE SIZE</summary>
+                        <p>S</p>
+                        <p>M</p>
+                        <p>L</p>
+                    </details>
+                    <details class="filter-title">
+                        <summary>QUANTITY</summary>
+                        <p>1</p>
+                        <p>2</p>
+                        <p>3</p>
+                    </details>
+                </div>
+                <button class="card-add--box">
+                    <a class="card-add" href="#">
+                        <img src="img/add cart pink.svg">
+                        <p class="card-add--desc">Add to Cart</p>
+                    </a>
+                </button>
+            </div>
+        </div>
+    </section>
+    <div class="produscts-box">
+        <div class="container">
             <div class="products-item">
                 <div class="item item1">
                     <a class="item-link" href="#">
@@ -189,9 +220,8 @@
                     </div>
                 </div>
             </div>
-
         </div>
-    </section>
+    </div>
 
 
     <section class="reviews">
